# tele-health-be

./: .gitignore  pyproject.toml
teleheath/: .lintstagedrc.json  .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
teleheath/src/: main.tsx
teleheath/src/lib/: axios.ts  handle-api-exceptions.ts
teleheath/src/routes/: __root.tsx
webapp/: pyproject.toml
webapp/appointment/: models.py  urls.py
webapp/appointment/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_appointment_hospital.py
webapp/appointment/serializers/: __init__.py  create.py  list.py
webapp/appointment/views/: __init__.py  create.py  list.py
webapp/base/models/: _base.py
webapp/base/utils/: generate_token.py
webapp/core/: settings.py  urls.py
webapp/doctor/: models.py  urls.py
webapp/doctor/filters/: doctor.py
webapp/doctor/migrations/: 0001_initial.py  0002_initial.py  0003_doctor_image.py  0003_timeslot.py
webapp/doctor/models/: __init__.py  doctor.py  time_slot.py
webapp/doctor/views/: __init__.py  list.py  retrieve.py  slot.py
webapp/gatekeeper/: admin.py
webapp/gatekeeper/managers/: __init__.py  user.py
webapp/gatekeeper/migrations/: 0001_initial.py  0002_alter_user_role.py  0002_user_role.py
webapp/gatekeeper/models/: __init__.py  (+1 more)
webapp/hospital/: admin.py
webapp/notification/: models.py  serializers.py  urls.py  views.py
webapp/patient/: models.py  serializers.py  urls.py  views.py
webapp/report/: models.py  serializers.py  urls.py  views.py
webapp/worker/: admin.py  models.py  serializers.py
(+68 files in other folders)
